--- a/lista1/Makefile
+++ b/lista1/Makefile
@@ -10,7 +10,13 @@ ciphertext.des3:
 decrypted.des3:
 	python zad1.py dec_des3 > $@
 
-clean:
-	rm *.{aes,des3}
+ciphertext.blowfish:
+	python zad1.py enc_blowfish > $@
 
-.PHONY: clean *.aes *.des3
+decrypted.blowfish:
+	python zad1.py dec_blowfish > $@
+
+clean:
+	rm *.{aes,des3,blowfish}
+
+.PHONY: clean *.aes *.des3 *.blowfish
